--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,19 @@
     <groupId>ru.sbrf.ckr.sberboard</groupId>
     <artifactId>increment-save-agent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <packaging>war</packaging>
 
 
