Дообавил Lombok; Добавил запуск по расписанию; Добавил тестовый сервис;

--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,11 @@
             <artifactId>spring-kafka</artifactId>
             <version>${spring.kafka.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
     </dependencies>
 
     <profiles>
