--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <log4j2.version>2.13.3</log4j2.version>
 
         <junit.version>4.11</junit.version>
+        <mockito.version>3.6.28</mockito.version>
         <postgresql.jdbc.version>42.2.18</postgresql.jdbc.version>
 
         <api.persistence.version>2.2</api.persistence.version>
@@ -57,6 +58,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
