SBERBOARD-1918 Создание новой таблице в схема архива SBERBOARD-1919 Добавление столбца incr_pack_run_ID во все таблицы uml-диаграмма Изменение пакета и имени класса DataByTableNameRawDataDao -> DataByTableNameRawDataIncrementDao

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -61,6 +61,11 @@
   </resource-env-ref>
 
   <resource-env-ref>
+    <resource-env-ref-name>increment/manualMode/packageSmd</resource-env-ref-name>
+    <resource-env-ref-type>java.lang.String</resource-env-ref-type>
+  </resource-env-ref>
+
+  <resource-env-ref>
     <resource-env-ref-name>increment/pagination/pageSize</resource-env-ref-name>
     <resource-env-ref-type>java.lang.String</resource-env-ref-type>
   </resource-env-ref>
