Исправлено сообщение в логировании - использовался subscribe id вместо package id; Добавлено логирование при обработке каждой n страницы;

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -65,6 +65,10 @@
     <resource-env-ref-type>java.lang.String</resource-env-ref-type>
   </resource-env-ref>
 
+  <resource-env-ref>
+    <resource-env-ref-name>increment/pagination/pagesCountLoggingCheckpoint</resource-env-ref-name>
+    <resource-env-ref-type>java.lang.String</resource-env-ref-type>
+  </resource-env-ref>
 
 </web-app>
 
